--- a/appsettings.json
+++ b/appsettings.json
@@ -3,8 +3,8 @@
     "Smtp": {
       "Host": "smtp.gmail.com",
       "Port": "587",
-      "Username": "tankopeti@gmail.com",
-      "Password": "HUmmer513"
+      "Username": "",
+      "Password": ""
     }
   },
   "Logging": {
@@ -15,36 +15,31 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1,1433;Database=Cloud9_Nyugalom;User Id=sa;Password=HUmmer512!!!;TrustServerCertificate=True;"
+    "DefaultConnection": ""
   },
   "EmailSettings": {
-    "SmtpServer": "mail.maxer.hu",
+    "SmtpServer": "",
     "SmtpPort": 587,
     "SenderName": "Cloud9.2",
-    "SenderEmail": "peter.tanko@Cloud9.hu",
-    "SmtpUser": "peter.tanko@Cloud9.hu",
-    "SmtpPass": "HUmmer512!!!",
+    "SenderEmail": "",
+    "SmtpUser": "",
+    "SmtpPass": "",
     "UseSsl": false
   },
   "OpenSearch": {
-    "Url": "http://localhost:9200",
-    "Username": "admin",
-    "Password": "admin"
+    "Url": "",
+    "Username": "",
+    "Password": ""
   },
-     "TikaServer": {
-       "Url": "http://localhost:9998"
-     },
-"Twilio": {
+  "TikaServer": {
+    "Url": ""
+  },
+  "Twilio": {
     "AccountSid": "",
     "AuthToken": "",
-    "PhoneNumber": "+"
+    "PhoneNumber": ""
   },
-  
   "FileStorage": {
-    "TaskDocumentsRoot": "/Users/tp/Projects/fileok"
+    "TaskDocumentsRoot": ""
   }
-
-
-
-     
 }
