--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,60 @@
 version: "3.7"
 services:
   sqlserver:
+services:
+  mssql:
     image: mcr.microsoft.com/mssql/server:2019-latest
+    container_name: cloud9-mssql
+    environment:
+      ACCEPT_EULA: "Y"
+      SA_PASSWORD: "HUmmer512!!!"
+    ports:
+      - "1433:1433"
+    volumes:
+      - /srv/cloud9/mssql:/var/opt/mssql
+    networks:
+      - app-network
+
+  app1:
+    build:
+      context: .
+      dockerfile: dockerfile
+    container_name: cloud9-app1
+    depends_on:
+      - mssql
+    environment:
+      ASPNETCORE_ENVIRONMENT: "Production"
+      ASPNETCORE_URLS: "http://0.0.0.0:8080"
+      ConnectionStrings__DefaultConnection: 'Server=mssql;Database=Cloud9.2;User Id=sa;Password=HUmmer512!!!;TrustServerCertificate=True;'
+    ports:
+      - "8081:8080"
+    volumes:
+      - /srv/cloud9/dpkeys:/var/dpkeys
+    networks:
+      - app-network
+
+  app2:
+    build:
+      context: .
+      dockerfile: dockerfile
+    container_name: cloud9-app2
+    depends_on:
+      - mssql
+    environment:
+      ASPNETCORE_ENVIRONMENT: "Production"
+      ASPNETCORE_URLS: "http://0.0.0.0:8080"
+      ConnectionStrings__DefaultConnection: 'Server=mssql;Database=Cloud9.2;User Id=sa;Password=HUmmer512!!!;TrustServerCertificate=True;'
+    ports:
+      - "8082:8080"
+    volumes:
+      - /srv/cloud9/dpkeys:/var/dpkeys
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
+   image: mcr.microsoft.com/mssql/server:2019-latest
     environment:
       - SA_PASSWORD=HUmmer512!!!
       - ACCEPT_EULA=Y
