--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: "3.7"
-services:
-  sqlserver:
+
 services:
   mssql:
     image: mcr.microsoft.com/mssql/server:2019-latest
     container_name: cloud9-mssql
+    restart: always
     environment:
       ACCEPT_EULA: "Y"
       SA_PASSWORD: "HUmmer512!!!"
@@ -15,80 +15,25 @@ services:
     networks:
       - app-network
 
-  app1:
-    build:
-      context: .
-      dockerfile: dockerfile
-    container_name: cloud9-app1
-    depends_on:
-      - mssql
-    environment:
-      ASPNETCORE_ENVIRONMENT: "Production"
-      ASPNETCORE_URLS: "http://0.0.0.0:8080"
-      ConnectionStrings__DefaultConnection: 'Server=mssql;Database=Cloud9.2;User Id=sa;Password=HUmmer512!!!;TrustServerCertificate=True;'
-    ports:
-      - "8081:8080"
-    volumes:
-      - /srv/cloud9/dpkeys:/var/dpkeys
-    networks:
-      - app-network
-
-  app2:
-    build:
-      context: .
-      dockerfile: dockerfile
-    container_name: cloud9-app2
-    depends_on:
-      - mssql
-    environment:
-      ASPNETCORE_ENVIRONMENT: "Production"
-      ASPNETCORE_URLS: "http://0.0.0.0:8080"
-      ConnectionStrings__DefaultConnection: 'Server=mssql;Database=Cloud9.2;User Id=sa;Password=HUmmer512!!!;TrustServerCertificate=True;'
-    ports:
-      - "8082:8080"
-    volumes:
-      - /srv/cloud9/dpkeys:/var/dpkeys
-    networks:
-      - app-network
-
-networks:
-  app-network:
-    driver: bridge
-   image: mcr.microsoft.com/mssql/server:2019-latest
-    environment:
-      - SA_PASSWORD=HUmmer512!!!
-      - ACCEPT_EULA=Y
-    ports:
-      - "1433:1433"
-    networks:
-      - app-network
   app:
     build:
-      context: ./Cloud9.2
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: dockerfile
+    container_name: cloud9-app
+    restart: always
+    depends_on:
+      - mssql
+    environment:
+      ASPNETCORE_ENVIRONMENT: "Production"
+      ASPNETCORE_URLS: "http://0.0.0.0:8080"
+      ConnectionStrings__DefaultConnection: "Server=mssql;Database=Cloud9.2;User Id=sa;Password=HUmmer512!!!;TrustServerCertificate=True;"
     ports:
       - "8080:8080"
     volumes:
-      - .:/src
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=http://+:8080
-      - ConnectionStrings__DefaultConnection=Server=sqlserver;Database=Cloud9.2;User Id=sa;Password=HUmmer512!!!;TrustServerCertificate=True;
-      - Email__Smtp__Host=smtp.gmail.com
-      - Email__Smtp__Port=587
-      - Email__Smtp__Username=tankopeti@gmail.com
-      - Email__Smtp__Password=HUmmer513
-      - EmailSender__SmtpServer=mail.maxer.hu
-      - EmailSender__SmtpPort=587
-      - EmailSender__SenderName=Cloud9.2
-      - EmailSender__SenderEmail=peter.tanko@Cloud9.hu
-      - EmailSender__SmtpUser=peter.tanko@Cloud9.hu
-      - EmailSender__SmtpPass=HUmmer512!!!
-      - EmailSender__UseSsl=false
-    depends_on:
-      - sqlserver
+      - /srv/cloud9/dpkeys:/var/dpkeys
     networks:
       - app-network
+
 networks:
   app-network:
     driver: bridge
